--- a/css/styles.css
+++ b/css/styles.css
@@ -18,16 +18,13 @@
 }
 /*-- fonts END --------------------------------------*/
 /*-- General --------------------------------------*/
-body {
+html {
     animation: load 1.5s;
     scroll-behavior: smooth;
     background: #2D2D2D;
     margin: 0 auto;
     width: 98%;
 }
-/*--.indexbody {
-    background-image: linear-gradient(#757373, #5E5353);
-}--*/
 @keyframes load {
     0% {opacity: 0%;}
     100% {opacity: 100%}
@@ -91,10 +88,13 @@ nav h2, nav p {
 }
 /*-- index END --------------------------------------*/
 
-/*-- Projects --------------------------------------*/
-.project1 {
-    padding-top: 100vh;
+
+.blank{
+    margin-bottom: 5vh;
+    overflow: visible;
 }
+
+/*-- Projects --------------------------------------*/
 .project1, .project2, .project3, .project4 {
     padding: 15vh 0;
 }
@@ -103,16 +103,12 @@ nav h2, nav p {
     background-repeat: no-repeat;
     background-position: center;
     height: 35vw;
-    transition: 0.3s;
 }
 .id_txt1, .id_txt2{
     color: #fff;
 }
 .id_txt2{
     display: none;
-}
-.blank{
-    height: 105vh;
 }
 .pr1_img {
     background-image: url(../images/SABF/SABF_head.jpg);
@@ -138,7 +134,6 @@ nav h2, nav p {
 .blb_line{
     border-right: 1px solid #000;
     height: 100%;
-
 }
 .blb div h2, .blb div h1 {
     text-align: center;
