--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ p{
 }
 /*-- navigation --------------------------------------*/
 nav {
-    margin-top: 0.8vh;
+    margin-top: 10px;
     position: fixed;
     mix-blend-mode: exclusion;
     border-bottom: 0.5px solid #fff;
@@ -99,8 +99,8 @@ nav h2, nav p {
 .pr1_img, .pr2_img, .pr3_img, .pr4_img {
     background-size: contain; 
     background-repeat: no-repeat;
-    background-position: center;
-    height: 35vw;
+    background-position: top center;
+    height: 34vw;
 }
 .id_txt1, .id_txt2{
     color: #fff;
@@ -189,7 +189,7 @@ nav h2, nav p {
 
 
 /* ---------------------- Phone ---------------------- */
-@media screen and (min-width: 320px) and (max-width:500px){
+@media screen and (min-width: 0) and (max-width:767px){
     /* -- main things -- */
     h1 {font-size: 4.34vw;}
     h2 {font-size: 2.43vw}
@@ -210,15 +210,14 @@ nav h2, nav p {
     }
 
 /* ---------------------- Tablet ---------------------- */
-@media screen and (min-width: 501px) and (max-width:1366px){
+@media screen and (min-width: 768px) and (max-width:1366px){
     /* -- main things -- */
     h1 {font-size: 1.736vw;}
     p {font-size: 0.972vw;}
     /* -- index -- */
-    .index1 h1{font-size: 3vw;}
+    .index1 h1{font-size: 3.2vw;}
     .pr1_img, .pr2_img, .pr3_img, .pr4_img {height: 35vw;}
-    .project4 {
-    margin-bottom: 15vh;}
+    .project4 {margin-bottom: 15vh;}
     /* -- SABF -- */
     .SABFintro {
     margin-top: 8vh;}
