--- a/css/styles.css
+++ b/css/styles.css
@@ -256,6 +256,10 @@ nav h3, nav p {
     margin: auto;
     margin-bottom: 3vw;
 }
+/*-- .assets h2 {
+    margin-bottom:1vw;
+    padding-left:5vw;
+} --*/
 .spacer {
     height: auto;
     width: 100%;
@@ -310,7 +314,7 @@ nav h3, nav p {
         font-size: 2.6vw;
     }
     .index2 {
-        top: 70px;
+        top: 20vw;
     }
 
 /*-- INFO --*/
@@ -331,8 +335,7 @@ nav h3, nav p {
         padding: 0;
     }
 /*-- SABF --*/
-    .SABF_head {height: 50vw; margin-top: 20vw; padding: 0;}
-    
+    .SABF_head {height: 50vw; margin-top: 20vw; padding: 0;
 }
 /* ---------------------- Small Tablet ----------------------*/ 
 @media screen and (min-width: 501px) and (max-width:767px){
