--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ h3, p {
 }
 
 .vimeo {
-    z-index: -1;
+    z-index: 0;
 }
 
 /*-- navigation --------------------------------------*/
@@ -81,6 +81,7 @@ nav {
     padding-bottom: 10px;
     width: 100%;
     top: 0;
+    z-index: 9999;
 }
 nav h3, nav p {
     font-size: 0.972vw;
@@ -256,10 +257,12 @@ nav h3, nav p {
     margin: auto;
     margin-bottom: 3vw;
 }
-/*-- .assets h2 {
-    margin-bottom:1vw;
-    padding-left:5vw;
-} --*/
+.assets h3 {
+    margin-top: 3vw;
+    margin-bottom:2vw;
+    text-align: center;
+}
+
 .spacer {
     height: auto;
     width: 100%;
@@ -269,15 +272,27 @@ nav h3, nav p {
 .introtxt {
     margin: 2.50vw 0 1.75vw 0;
 }
-
 /*-- SEOUL ART BOOK FAIR --------------------------------------*/
-.SABF_head {
+.SABF_head,.DSH_head,.ASHLAR_head {
     margin-top: 8vw;
     max-width: 2000px;
 }
 .brochure {
     background-color: black;
 }
+/*-- ASHLAR --------------------------------------*/
+.ashlarlink,.dshlink {
+    border: 1px solid #fff;
+    border-radius: 50%;
+    width: 15vw;
+    padding-top: 2vw;
+    padding-bottom: 2vw;
+    margin: 0 auto;
+    text-align: center;
+}
+/*-- DIGITAL SELF HARM --------------------------------------*/
+
+
 /* ---------------------- MEDIA QUERIES AHHHHH ---------------------- */
 
 
@@ -335,7 +350,7 @@ nav h3, nav p {
         padding: 0;
     }
 /*-- SABF --*/
-    .SABF_head {height: 50vw; margin-top: 20vw; padding: 0;
+    .SABF_head,.DSH_head,.ASHLAR_head {height: 50vw; margin-top: 20vw; padding: 0;
 }
 /* ---------------------- Small Tablet ----------------------*/ 
 @media screen and (min-width: 501px) and (max-width:767px){
