--- a/css/styles.css
+++ b/css/styles.css
@@ -257,12 +257,13 @@ footer {
     margin: 0.4vw 0 0 0;
 }
 .assets {
+    margin-right: auto;
+    margin-left: auto;
     padding-left: 2rem;
     padding-right: 2rem;
+    max-width: 2000px
 }
 .assets div {
-    max-width: 2000px;
-    margin: auto;
     margin-bottom: 4vw;
 }
 .spacer {
@@ -341,7 +342,9 @@ footer {
     margin-top: 0.7vw;
     padding-left: 2.5vw;
 }
-
+.maskintrosm {
+    display: none;
+}
 
 
 
@@ -352,8 +355,13 @@ footer {
 /* ---------------------- Phone ---------------------- */
 @media screen and (min-width: 0) and (max-width:500px){
 /* -- main things -- */
+    /*-- 
     h2 {font-size: 3.733vw;}
-    h3, p, nav h3, nav p, h4 {font-size: 2.933vw; line-height: 3.467vw;}
+    h3, p, nav h3, nav p, h4 {font-size: 2.933vw; line-height: 3.467vw;} --*/
+    
+    h2 {font-size: 4.4vw;}
+    h3, p, nav h3, nav p, h4 {font-size: 3.1vw; line-height: 4.2vw;} 
+    
     .assets {
         padding-left: 1rem;
         padding-right: 1rem;
@@ -380,7 +388,7 @@ footer {
         display: none;
     }
     .prefoot {
-        top: 10vw;
+        top: 10.6vw;
     }
     .index2 h1 {
         font-size: 2.6vw;
@@ -403,7 +411,7 @@ footer {
         padding-bottom: 4vw;
     }
     .assets div {
-        padding: 0;
+        padding: 0.25rem;
     }
     .assets p{
         padding-right: 2.5vw;
@@ -413,7 +421,8 @@ footer {
 }
 /*-- DSH --*/
     .deski {display: none;}
-    .mobi {display: inherit;}
+    .mobi {display: inherit;
+    margin-bottom: 2vw;}
     #dshvid {
         margin-top: 5vw;
     }
@@ -428,7 +437,19 @@ footer {
         padding-top: 3.5vw;
     }
 /*-- MASK --*/
-
+    .maskintrosm {
+        background-image: url(../images/MASK/cut1.png);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 57vw;
+        display: inherit;
+        margin-bottom: 2vh;
+    }
+    .maskintrolg {
+        display: none;
+    }
     
     
     
@@ -467,5 +488,9 @@ footer {
     background-color: black;
     height: 29vw;
     }
+    .assets {
+        
+    }
 }
+    
     
