--- a/css/styles.css
+++ b/css/styles.css
@@ -471,6 +471,7 @@ top: 0}
     h3, p, nav h3, nav p, h4 {font-size: 2.933vw; line-height: 3.467vw;} --*/
     
     h2, h4 {font-size: 4.4vw; line-height: 5.7vw;}
+    h4 {letter-spacing: 0;}
     h3, p, nav h3, nav p{font-size: 3.1vw; line-height: 4.2vw;} 
     h5 {font-size: 6vw;        
     }
@@ -575,9 +576,8 @@ top: 0}
     #dshflow {
         display: none;}
     #dshflowsm {
-        display: inherit;
+        display: block;
         margin-bottom: 4vw;
-        height: inherit;
     }
     #dshp {
         margin-top: 2vw;
