--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,7 @@ h4 {
     margin: 0 0 0.4vw 0;
     line-height: 1.8vw;
     font-weight: normal;
+    text-rendering:optimizeLegibility;
 }
 h5 {
     font-size: 2vw;
@@ -105,6 +106,7 @@ nav {
     width: 100%;
     top: 0;
     z-index: 9999;
+    color: #fff;
 }
 nav h3, nav p {
     font-size: 0.972vw;
@@ -114,8 +116,8 @@ nav h3, nav p {
     padding: 0;
     margin: 0;
 }
-nav p {
-    margin-top: 0.1vw;
+nav p{
+    margin-top: 0.05vw;
 }
 .info {
     text-align: right;
@@ -481,7 +483,11 @@ top: 0}
     
     h2, h4 {font-size: 4.4vw; line-height: 5.7vw;}
     h3, p, nav h3, nav p{font-size: 3.1vw; line-height: 4.2vw;} 
-    h5 {font-size: 6vw;        
+    h5 {font-size: 6vw;}
+    nav h3 {line-height: inherit}
+    nav p{
+        margin-top: 0.14vw;
+        line-height: 4.2vw;
     }
     .assets {
         padding-left: 1rem;
