--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,6 @@ h4 {
     margin: 0 0 0.4vw 0;
     line-height: 1.8vw;
     font-weight: normal;
-    text-rendering:optimizeLegibility;
 }
 h5 {
     font-size: 2vw;
@@ -99,10 +98,10 @@ h3, p {
 /*-- navigation --------------------------------------*/
 nav {
     padding-top: 10px;
+    padding-bottom: 10px;
     position: fixed;
     mix-blend-mode: exclusion;
     border-bottom: 0.5px solid #fff;
-    padding-bottom: 10px;
     width: 100%;
     top: 0;
     z-index: 9999;
@@ -117,7 +116,7 @@ nav h3, nav p {
     margin: 0;
 }
 nav p{
-    margin-top: 0.05vw;
+    margin-top: 0.15vw;
 }
 .info {
     text-align: right;
@@ -215,6 +214,11 @@ top: 0}
     margin: 1vh 1vw 15vh 1vw;
     overflow: visible;
 }
+
+
+/*-- NAV --*/
+
+
 
 
 /*-- Projects --------------------------------------*/
@@ -485,14 +489,13 @@ top: 0}
     h3, p, nav h3, nav p{font-size: 3.1vw; line-height: 4.2vw;} 
     h5 {font-size: 6vw;}
     nav h3 {line-height: inherit}
-    nav p{
-        margin-top: 0.14vw;
-        line-height: 4.2vw;
-    }
     .assets {
         padding-left: 1rem;
         padding-right: 1rem;
     }
+    nav p{
+    margin-top: 0.68vw;
+}
 /* -- index -- */
     .index1 h1 {font-size: 2.6vw;}
     .index1 br {display: none;}
