--- a/css/styles.css
+++ b/css/styles.css
@@ -3,19 +3,19 @@
 @font-face {
     font-family: "ortica";
     src: url(../fonts/ortica-light-webfont.woff);
-    font-weight: normal;
-    font-style: normal;
+    font-weight: 100;
+    font-style: 100;
 }
 @font-face {
     font-family: "publicsans";
     src: url(../fonts/publicsans-light-webfont.woff);
-    font-weight: normal;
-    font-style: normal;
+    font-weight: 100;
+    font-style: 100;
 }
 @font-face{
     font-family: "publicsans";
     src: url(../fonts/publicsans-light-webfont.woff);
-    font-weight: normal;
+    font-weight: 100;
     font-style: italic;
 }
 /*-- fonts END --------------------------------------*/
@@ -51,11 +51,11 @@ a:hover,a h2:hover,a h4:hover, a h5:hover{
 }
 h1 {
     font-family: publicsans, sans-serif;
-    font-weight: normal;
+    font-weight: 100;
 }
 h2 {
     font-size: 1.250vw;
-    font-weight: normal;
+    font-weight: 100;
     font-family: publicsans, sans-serif;
     margin: 0
     
@@ -69,24 +69,24 @@ h4 {
     font-family: ortica, serif;
     margin: 0 0 0.4vw 0;
     line-height: 1.8vw;
-    font-weight: normal;
+    font-weight: 100;
 }
 h5 {
     font-size: 2vw;
     margin: 0;
     padding: 0;
     font-family: publicsans, sans-serif;
-    font-weight: normal;
+    font-weight: 100;
 }
 
 
 p{
     font-family: ortica, serif;
-    font-weight: normal;
+    font-weight: 100;
 }
 h3, p {
     font-size: 0.972vw;
-    font-weight: 400;
+    font-weight: 100;
     line-height: 1.35vw;
     margin: 0 0 0.5vw 0;
 }
@@ -97,8 +97,8 @@ h3, p {
 
 /*-- navigation --------------------------------------*/
 nav {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     position: fixed;
     mix-blend-mode: exclusion;
     border-bottom: 0.5px solid #fff;
@@ -338,6 +338,7 @@ top: 0}
     padding-left: 0.5vw;
     padding-right: 0.5vw;
     margin-bottom: 0;
+    margin-top: 0.4vw;
 }
 .infoassets div {
     margin-bottom: 1vw;
